--- a/styles.scss
+++ b/styles.scss
@@ -1,32 +1,50 @@
-* {
+$header-color: crimson;
+$box-color: lightgreen;
+
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+body {
 
-header {
-    color: green
 }
-
+header {
+    color: $header-color;
+    text-align: center;
+}
+h4 {
+    color: purple;
+    text-align: center;
+}
+p {
+    text-align: center;
+}
 section {
     display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.box {
+    padding: 10px;
+    margin: 10px;
+    background-color: $box-color;
+    opacity: 75%;
+    width: 75%;
     justify-content: center;
-}
-
-.birds {
-    width: 120px;
-    height: 120px;
-    display: inline-block;
-}
-
-.mockingbird {
-    height: 120px;
-    width: 120px;
-}
-.mockingbird-box {
-    padding: 120px;
-}
-a {
     display: flex;
-    float: right;
+}
+.mockingbird {
+    width: 150px;
+    height: 150px;
+}
+.crow {
+    width: 150px;
+    height: 150px;
+    background-color: $box-color;
+}
+.birds {
+    width: 150px;
+    height: 150px;
+    background-color: $box-color;
 }
