--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,40 @@
   box-sizing: border-box;
 }
 
+body {
+  background-image: url(./assets/Library.jpg);
+  background-position: center;
+  height: 100vh;
+  background-repeat: repeat-y;
+  background-size: cover;
+}
+
+.header-box {
+  padding: 10px;
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  background-color: lightgrey;
+  border: 1px solid black;
+}
+
 header {
   color: crimson;
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
-h4 {
+h3 {
   color: purple;
   text-align: center;
+  padding: 10px;
 }
 
 p {
   text-align: center;
+  font-size: 1.5em;
+  padding: 10px;
 }
 
 section {
@@ -29,7 +51,7 @@ section {
   margin: 10px;
   background-color: lightgreen;
   opacity: 75%;
-  width: 75%;
+  width: 48%;
   justify-content: center;
   display: flex;
 }
