--- a/styles.scss
+++ b/styles.scss
@@ -37,6 +37,11 @@ p {
     font-size: 1.5em;
     padding: 10px;
 }
+a {
+    display: flex;
+    float: right;
+    margin: 64px 59px;
+}
 section {
     display: flex;
     align-items: center;
